--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,6 +83,63 @@ ul.menu{
 }
 
 
+.visuals{
+    margin-top: 70px;
+}
+
+.visuals p{
+    text-align: center;
+    font-size:40px;
+}
+
+.container{
+    width: 800px;
+    margin: 0 auto;
+    margin-top:30px;
+    
+}
+
+/* //// MEDIA //// */
+
+
+.media2{
+
+    margin: 0 auto;
+    padding: 0 0 0 0;
+    border: 2px solid #1D1F21;
+    /* width: 500px; */
+    /*background-color: #fff;*/
+}
+
+
+
+.media_area{
+    /*float: left;*/
+    display: block;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 15px; 
+    /*width:100%; */
+    /*height: 562.5px; */
+    /*background-color: #1C1C1E;*/
+    /*overflow: hidden;*/
+    
+}
+
+
+#video-display {
+    /*position:absolute;*/
+    left: 0; 
+    width: 100%;
+    height: ;
+    margin: 0 auto;
+    padding: 0 auto;
+    /*border: 3px solid #fff;*/
+
+}
+
+
+
 /* //// VIDEO BACKGROUND //// */
 
 
@@ -110,8 +167,15 @@ ul.menu{
     }
 }
 
-@media screen and (max-width: 910px){
-    
+@media screen and (max-width: 820px){
+    .container{
+        width: 95%;
+        margin-top:10px;
+    }
+    .visuals{
+        margin-top: 40px;
+        margin-bottom:40px;
+    }
     
 
 }
