--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,6 +21,14 @@ a{
     text-decoration: none;
 }
 
+a:hover{
+    opacity:.6;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
 .sidebar{
     position: fixed;
     z-index: 1;
