--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,6 +36,10 @@ a:hover{
     transition: all 0.2s ease-in-out;
 }
 
+.title{
+    padding-left:20px;
+}
+
 .sidebar{
     position: fixed;
     z-index: 1;
@@ -54,6 +58,8 @@ ul.menu{
     padding-top:10px;
     
 }
+
+
 
 .logo img{
     padding-left:20px;
