--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ src: url('https://raw.githack.com/awortham33/opendepo/master/OratorStd.otf');
 
 body{
     background-color:#000;
-    background-image: url('https://raw.githack.com/awortham33/awortham33.github.io/master/media/sparks.png');
+    background-image: url('https://awortham33.github.io/master/media/sparks.png');
     background-repeat: no-repeat;
     background-size: cover;
     color:#9B9B9B;
