--- a/bundle.css
+++ b/bundle.css
@@ -15,6 +15,8 @@ body{
     background-color:#000;
     background-image: url('./assets/sparks.png');
     background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-position: center;
     background-size: cover;
     color:#9B9B9B;
     text-transform:uppercase;
@@ -214,6 +216,12 @@ ul .links{
         margin: auto;
         padding: 20px 0px 30px 0px;
     }
+    
+    .body{
+        background-position: right top;
+        
+    }
+
 }
 
 @media screen and (min-width: 750px){
