--- a/bundle.css
+++ b/bundle.css
@@ -46,6 +46,10 @@ li{
     margin: 40px 0px 40px 0px;
 }
 
+.footer a{
+    font-weight: 600;
+}
+
 .footer a:hover{
     color: #fff;
     -webkit-transition: all 0.2s ease-in-out;
