--- a/bundle.css
+++ b/bundle.css
@@ -55,12 +55,23 @@ li{
     transition: all 0.2s ease-in-out;
 }
 
-.footer img{
+/*.footer img{
     height: 16px;
 }
+*/
 
-.mail-icon{
+.footer a{
+    padding: 0px 5px;
+    margin: 0;
+}
+
+.icon{
     height: 16px;
+    margin-bottom: 2px
+}
+
+.instagram-icon{
+    height: 20px;
 }
 
 ul .links{
